Fixing flex layout issue w/ Safari

--- a/awx/ui/client/src/shared/layouts/one-plus-two.less
+++ b/awx/ui/client/src/shared/layouts/one-plus-two.less
@@ -19,7 +19,7 @@
 }
 
 .OnePlusTwo-left--panel(@height: 100%; @breakpoint: 900px) {
-    flex: 0 0;
+    flex: 1 0;
     height: @height;
     width: 100%;
 	margin-right: 20px;
@@ -34,7 +34,7 @@
 
 .OnePlusTwo-right--panel(@height: 100%; @breakpoint: 900px) {
     height: @height;
-    flex: 1 0;
+    flex: 2 0;
     .Panel{
         height: 100%;
     }
